force-app/main/default/objects/Product2/fields/Acquired_Company__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquired Company</label>
    <type>Checkbox</type>
</CustomField>