force-app/main/default/objects/Product2/fields/Add_on_country__c.field-meta.xml
<CustomField>
    <fullName>Add_on_country__c</fullName>
    <formula>If( CONTAINS(text( AddOnType__c ), &quot;Countr&quot;) , &apos;true&apos;,&apos;false&apos;)</formula>
    <label>Add on country</label>
    <type>Text</type>
</CustomField>