force-app/main/default/objects/Product2/fields/AddOnType__c.field-meta.xml
<CustomField>
    <fullName>AddOnType__c</fullName>
    <label>AddOnType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>users</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Daas</fullName>
                <label>DaaS</label>
            </value>
            <value>
                <fullName>DataCreditsAPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>