force-app/main/default/objects/Product2/fields/APIValue__c.field-meta.xml
<CustomField>
    <fullName>APIValue__c</fullName>
    <label>Api value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>