force-app/main/default/objects/Product2/fields/AS__c.field-meta.xml
<CustomField>
    <fullName>AS__c</fullName>
    <description>Sync from Zuora. If 1, it&apos;s AS Product</description>
    <label>AS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>