force-app/main/default/objects/Product2/fields/Contactproduct__c.field-meta.xml
<CustomField>
    <fullName>Contactproduct__c</fullName>
    <description>Will indicate if the product is a contact feature,
Will be used also to indicate on quote if the quote includes a contact feature product.</description>
    <label>Contactproduct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>