force-app/main/default/objects/Product2/fields/Contract_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Contract_Grouping__c</fullName>
    <label>Contract Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>