force-app/main/default/objects/Product2/fields/Contract_Wording__c.field-meta.xml
<CustomField>
    <fullName>Contract_Wording__c</fullName>
    <description>This field will be populated from Zuora product catalog</description>
    <label>Contract Wording</label>
    <length>255</length>
    <type>Text</type>
</CustomField>