force-app/main/default/objects/Product2/fields/Contract_Wording_Action__c.field-meta.xml
<CustomField>
    <fullName>Contract_Wording_Action__c</fullName>
    <description>MQ-1799
This picklist will help to build wording for the contract.</description>
    <label>Contract Wording Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Summary of Named Users</fullName>
            </value>
            <value>
                <fullName>Summary of Data Credits</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Contract wording</fullName>
            </value>
            <value>
                <fullName>Product Name</fullName>
            </value>
            <value>
                <fullName>Summary of Attributes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>