force-app/main/default/objects/Product2/fields/Display_On_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Display_On_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Tracking (1.0)</label>
    <type>Checkbox</type>
</CustomField>