force-app/main/default/objects/Product2/fields/EnterpriseProduct__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseProduct__c</fullName>
    <description>Values are synced from Zuora</description>
    <label>Enterprise Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>