force-app/main/default/objects/Product2/fields/GroupCompatibilityN__c.field-meta.xml
<CustomField>
    <fullName>GroupCompatibilityN__c</fullName>
    <label>Group Compatibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>BulkAPI</fullName>
            </value>
            <value>
                <fullName>Datafactory</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>DAAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>