force-app/main/default/objects/Product2/fields/InternalCode__c.field-meta.xml
<CustomField>
    <fullName>InternalCode__c</fullName>
    <description>Zuora Internal Code</description>
    <label>InternalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>