force-app/main/default/objects/Product2/fields/Is_Add_on_country_del__c.field-meta.xml
<CustomField>
    <fullName>Is_Add_on_country_del__c</fullName>
    <formula>IF (ISPICKVAL( AddOnType__c , &quot;Country&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Add on country</label>
    <type>Checkbox</type>
</CustomField>