force-app/main/default/objects/Product2/fields/Is_Admetricks_product__c.field-meta.xml
<CustomField>
    <fullName>Is_Admetricks_product__c</fullName>
    <description>MQ-2178</description>
    <formula>IF ( ISPICKVAL(  SolutionType__c  , &quot;Admetricks&quot;) , &apos;true&apos; ,&apos;false&apos;)</formula>
    <label>Is Admetricks product</label>
    <type>Text</type>
</CustomField>