force-app/main/default/objects/Product2/fields/Is_manually_supported__c.field-meta.xml
<CustomField>
    <fullName>Is_manually_supported__c</fullName>
    <description>MQ-2502</description>
    <formula>IF ( ISPICKVAL( AddOnType__c , &apos;Manuallysupported&apos;) ,&apos;true&apos;, &apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is manually supported</label>
    <type>Text</type>
</CustomField>