force-app/main/default/objects/Product2/fields/Is_Newslever_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Newslever_Product__c</fullName>
    <formula>IF ( AND(ISPICKVAL( SolutionType__c , &quot;Newslever&quot;),
									OR(CONTAINS(Name, &apos;Newslever Base&apos;),CONTAINS(Name, &apos;Newslever - Additional&apos;)),
									NOT(OR(CONTAINS(Name, &apos;Newslever Base - Annual&apos;),CONTAINS(Name, &apos;Newslever Base - Monthly&apos;)))
								) , &apos;true&apos; ,&apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Newslever Product</label>
    <type>Text</type>
</CustomField>