force-app/main/default/objects/Product2/fields/Is_Product_4_0__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_4_0__c</fullName>
    <formula>IF ( ISPICKVAL( SolutionType__c , &quot;4.0&quot;) , &apos;true&apos; ,&apos;false&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Product 4.0</label>
    <type>Text</type>
</CustomField>