force-app/main/default/objects/Product2/fields/Is_TSM_product__c.field-meta.xml
<CustomField>
    <fullName>Is_TSM_product__c</fullName>
    <formula>IF ( ISPICKVAL(  SolutionType__c  , &quot;TSM&quot;) , &apos;true&apos; ,&apos;false&apos;)</formula>
    <label>Is TSM product</label>
    <type>Text</type>
</CustomField>