force-app/main/default/objects/Product2/fields/New_Business__c.field-meta.xml
<CustomField>
    <fullName>New_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Business</label>
    <type>Checkbox</type>
</CustomField>