force-app/main/default/objects/Product2/fields/Newslever_Companies_To_Follow__c.field-meta.xml
<CustomField>
    <fullName>Newslever_Companies_To_Follow__c</fullName>
    <label>Newslever Companies To Follow</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>