force-app/main/default/objects/Product2/fields/Newslever_Custom_Phrases__c.field-meta.xml
<CustomField>
    <fullName>Newslever_Custom_Phrases__c</fullName>
    <label>Newslever Custom Phrases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>