force-app/main/default/objects/Product2/fields/Newslever_Dashboards__c.field-meta.xml
<CustomField>
    <fullName>Newslever_Dashboards__c</fullName>
    <label>Newslever Dashboards</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>