force-app/main/default/objects/Product2/fields/No_Discount_Product__c.field-meta.xml
<CustomField>
    <fullName>No_Discount_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Discount Product</label>
    <type>Checkbox</type>
</CustomField>