force-app/main/default/objects/Product2/fields/NT_Product__c.field-meta.xml
<CustomField>
    <fullName>NT_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>maintenance and architecture future purposes
MIS-3462</description>
    <label>NT Product</label>
    <type>Checkbox</type>
</CustomField>