force-app/main/default/objects/Product2/fields/P_P__c.field-meta.xml
<CustomField>
    <fullName>P_P__c</fullName>
    <label>P&amp;P</label>
    <length>255</length>
    <type>Text</type>
</CustomField>