force-app/main/default/objects/Product2/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.ProductType__c</field>
            <operation>equals</operation>
            <value>Solution / Delivery</value>
        </filterItems>
        <filterItems>
            <field>Product2.Product_Tracking__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Products</relationshipLabel>
    <relationshipName>Child_Products</relationshipName>
    <type>Lookup</type>
</CustomField>