force-app/main/default/objects/Product2/fields/Premium_Add_one__c.field-meta.xml
<CustomField>
    <fullName>Premium_Add_one__c</fullName>
    <label>Premium Add-one</label>
    <length>255</length>
    <type>Text</type>
</CustomField>