force-app/main/default/objects/Product2/fields/ProductCompatibility__c.field-meta.xml
<CustomField>
    <fullName>ProductCompatibility__c</fullName>
    <label>Product Compatibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic,Advanced,Ultimate</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Basic,Advanced</fullName>
            </value>
            <value>
                <fullName>Advanced,Ultimate</fullName>
            </value>
            <value>
                <fullName>Basic,Ultimate</fullName>
            </value>
            <value>
                <fullName>Ultimate</fullName>
            </value>
            <value>
                <fullName>MarketIntelligence,Benchmarking,Essentials,FRO,AppEngagement</fullName>
            </value>
            <value>
                <fullName>App engagement</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Ultimate,App engagement</fullName>
            </value>
            <value>
                <fullName>Basic,Advanced,Ultimate,App engagement</fullName>
            </value>
            <value>
                <fullName>No Touch</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>NoTouch</fullName>
            </value>
            <value>
                <fullName>AppEngagement</fullName>
            </value>
            <value>
                <fullName>Basic,Advanced,Ultimate,AppEngagement</fullName>
            </value>
            <value>
                <fullName>Ultimate,AppEngagement</fullName>
            </value>
            <value>
                <fullName>Data Licensing</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Benchmarking</fullName>
            </value>
            <value>
                <fullName>MarketIntelligence</fullName>
            </value>
            <value>
                <fullName>MarketIntelligence,Benchmarking,Essentials</fullName>
            </value>
            <value>
                <fullName>FRO</fullName>
            </value>
            <value>
                <fullName>Ultimate,MarketIntelligence</fullName>
            </value>
            <value>
                <fullName>Basic,Advanced,Ultimate,MarketIntelligence,Benchmarking,Essentials</fullName>
            </value>
            <value>
                <fullName>Advanced,Ultimate,MarketIntelligence,Benchmarking,Essentials</fullName>
            </value>
            <value>
                <fullName>AppEngagement,MarketIntelligence,Benchmarking,Essentials</fullName>
            </value>
            <value>
                <fullName>Ultimate,MarketIntelligence,Benchmarking,Essentials</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>SIB,SIEnt,SIBINV,ShopInt,CIT,CIB,CIBin,CIEnt,EssentialDS,AdvancedDS,UltimateDS,AdvancedDSINV,EnterpriseDS,ISEssential,ISAdvanced,ISAdvancedINV,ISUltimate,EssentialRes,AdvancedRes,UltimateRes,DigitalMrkAQ,DAAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>