force-app/main/default/objects/Product2/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>New solution</fullName>
            </value>
            <value>
                <fullName>Not For Use</fullName>
            </value>
            <value>
                <fullName>New Catalog</fullName>
            </value>
            <value>
                <fullName>Solution / Delivery</fullName>
            </value>
            <value>
                <fullName>SKU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>