force-app/main/default/objects/Product2/fields/Purchase_Motion_Options__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Motion_Options__c</fullName>
    <label>Purchase Motion Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Price Increase</fullName>
            </value>
            <value>
                <fullName>Package Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>