force-app/main/default/objects/Product2/fields/SalesproTrial_check__c.field-meta.xml
<CustomField>
    <fullName>SalesproTrial_check__c</fullName>
    <formula>if( CONTAINS(&quot;SalesProTrial&quot;, TEXT( ProductCompatibility__c ) ),&apos;true&apos;, &apos;false&apos;)</formula>
    <label>SalesproTrial check</label>
    <type>Text</type>
</CustomField>