force-app/main/default/objects/Product2/fields/SolutionType__c.field-meta.xml
<CustomField>
    <fullName>SolutionType__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>Research AI</fullName>
            </value>
            <value>
                <fullName>Digital Suite</fullName>
            </value>
            <value>
                <fullName>Acquire MI</fullName>
            </value>
            <value>
                <fullName>Grow MI</fullName>
            </value>
            <value>
                <fullName>AS Standalone</fullName>
            </value>
            <value>
                <fullName>Prosus</fullName>
            </value>
            <value>
                <fullName>Sales Intelligence</fullName>
            </value>
            <value>
                <fullName>Shopper Intelligence</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Intelligence Suite</fullName>
            </value>
            <value>
                <fullName>Stock Intelligence Platform</fullName>
            </value>
            <value>
                <fullName>RankRanger</fullName>
            </value>
            <value>
                <fullName>DAAS</fullName>
            </value>
            <value>
                <fullName>DF Standalone</fullName>
            </value>
            <value>
                <fullName>Competitive Intelligence</fullName>
            </value>
            <value>
                <fullName>Partner Acquisition</fullName>
            </value>
            <value>
                <fullName>Admetricks</fullName>
            </value>
            <value>
                <fullName>42matters</fullName>
            </value>
            <value>
                <fullName>App Intelligence</fullName>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>