force-app/main/default/objects/Product2/fields/Upsell_Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Existing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upsell (Existing Account)</label>
    <type>Checkbox</type>
</CustomField>