force-app/main/default/objects/Product2/fields/Upsell_New_Paying_Account__c.field-meta.xml
<CustomField>
    <fullName>Upsell_New_Paying_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upsell (New Paying Account)</label>
    <type>Checkbox</type>
</CustomField>