force-app/main/default/objects/Product2/fields/zqu__Allow_Feature_Changes__c.field-meta.xml
<CustomField>
    <fullName>zqu__Allow_Feature_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if features in the product can be changed when creating QuoteProductFeatures</description>
    <inlineHelpText>If features in the product can be changed when creating QuoteProductFeatures</inlineHelpText>
    <label>Allow Feature Changes</label>
    <type>Checkbox</type>
</CustomField>