force-app/main/default/objects/Product2/fields/zqu__BillingEntity__c.field-meta.xml
<CustomField>
    <fullName>zqu__BillingEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity</label>
    <referenceTo>zqu__BillingEntity__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>