force-app/main/default/objects/Product2/fields/zqu__Catalog_Sync_History__c.field-meta.xml
<CustomField>
    <fullName>zqu__Catalog_Sync_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product link to catalog sync history</description>
    <inlineHelpText>Product link to catalog sync history</inlineHelpText>
    <label>Catalog Sync History</label>
    <referenceTo>zqu__Catalog_Sync_History__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>