force-app/main/default/objects/Product2/fields/zqu__Category__c.field-meta.xml
<CustomField>
    <fullName>zqu__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Products</fullName>
            </value>
            <value>
                <fullName>Add On Services</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>