force-app/main/default/objects/Product2/fields/zqu__Deleted__c.field-meta.xml
<CustomField>
    <fullName>zqu__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for soft deletion</description>
    <inlineHelpText>Flag for soft deletion</inlineHelpText>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>