force-app/main/default/objects/Product2/fields/zqu__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>zqu__EffectiveEndDate__c</fullName>
    <description>The Effective End Date of the Product.</description>
    <inlineHelpText>The Effective End Date of the Product.</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>