force-app/main/default/objects/Product2/fields/zqu__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>zqu__EffectiveStartDate__c</fullName>
    <description>The Effective Start Date of the Product.</description>
    <inlineHelpText>The Effective Start Date of the Product.</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>