force-app/main/default/objects/Product2/fields/zqu__SyncMessage__c.field-meta.xml
<CustomField>
    <fullName>zqu__SyncMessage__c</fullName>
    <description>Message for the Catalog Sync</description>
    <label>Sync Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>