force-app/main/default/objects/Product2/fields/zqu__Type__c.field-meta.xml
<CustomField>
    <fullName>zqu__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standalone</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>