force-app/main/default/objects/Product2/fields/Zuora_Product_Rate_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_Rate_Plan_ID__c</fullName>
    <description>MIS-7758 new free-text field for product ID</description>
    <label>Zuora Product Rate Plan ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>