force-app/main/default/objects/Product2/listViews/Product_Tracking.listView-meta.xml
<ListView>
    <fullName>Product_Tracking</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Display_On_Opportunity__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Tracking__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Product Tracking</label>
</ListView>