force-app/main/default/objects/Product2/listViews/Product_Tracking_SKUs.listView-meta.xml
<ListView>
    <fullName>Product_Tracking_SKUs</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Parent_Product__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>New_Business__c</columns>
    <columns>Renewal__c</columns>
    <columns>Upsell_Existing_Account__c</columns>
    <columns>Upsell_New_Paying_Account__c</columns>
    <columns>Acquired_Company__c</columns>
    <columns>Purchase_Motion_Options__c</columns>
    <columns>P_P_Type__c</columns>
    <columns>AddOnType__c</columns>
    <columns>Product_Tracking__c</columns>
    <columns>ProductType__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>SKU</value>
    </filters>
    <label>Product Tracking - SKUs</label>
</ListView>